working on mobile issue

--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ h1 {
   line-height: 1.5;
 }
 
+h2 {
+  font-family: "Courier New", Courier, monospace;
+  margin-bottom: 1rem;
+}
+
 h3 {
   font-family: "Courier New", Courier, monospace;
   margin-bottom: 1rem;
@@ -88,26 +93,6 @@ h3 {
   transform: scale(0.98);
 }
 
-#about {
-  padding: 40px;
-  text-align: center;
-}
-
-#about p {
-  font-size: 1.2rem;
-  max-width: 600px;
-  margin: auto;
-}
-
-#about h2 {
-  margin: 30px 0;
-  color: var(--primary-color);
-}
-
-.social a {
-  margin: 0 5px;
-}
-
 img {
   border-radius: 50%;
 }
@@ -118,4 +103,10 @@ img {
 
 .fab {
   color: white;
+}
+
+@media (max-width: 375px) {
+  h1 {
+    font-size: 40px;
+  }
 }
